Add `blocks` package for unified block discovery adapters and utilities, refactor `Bpc` for enhanced purity checks, overlap resolution, and latent handling.